--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@
 body {
     text-align: center;
 }
+
+.quadrado {
+    text-align: center;
+    width: 100px;
+    background: #eee;
+    display: inline-block;
+    padding: 15px;
+    font-size: 68px;
+    margin: 10px;
+    cursor: pointer;
+}
