--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #title {
-    padding: 40px
+    padding: 30px
 }
 
 .quadrado {
@@ -23,4 +23,9 @@ body {
     font-size: 68px;
     margin: 10px;
     cursor: pointer;
+}
+
+.vencedor, .jogador {
+    font-size: 30px;
+    margin-top: 10px;
 }
